ts基本类型,类型别名,函数约束学习

--- a/笔记01.md
+++ b/笔记01.md
@@ -8,23 +8,23 @@
 
 js 的原罪
 
--   js 语言本身的特性, 决定了该语言无法适应大型的复杂项目。
--   弱类型: 某个变量,可以随时更换类型。
--   解释性: 错误发生的时间, 是在运行时。
+- js 语言本身的特性, 决定了该语言无法适应大型的复杂项目。
+- 弱类型: 某个变量,可以随时更换类型。
+- 解释性: 错误发生的时间, 是在运行时。
 
 ## TypeScript
 
 TS 是 JS 的超集, 是一个可选的,静态的类型系统。
 
--   类型系统
+- 类型系统
 
 对代码中所有的标识符(变量、函数、参数、返回值)进行类型检查。
 
--   可选的
+- 可选的
 
 学习曲线平滑
 
--   静态的
+- 静态的
 
 无论是浏览器,还是 node 环境,无法直接是被 ts 代码
 
@@ -40,9 +40,9 @@ TS 不参与运行时的类型检查
 
 ## TS 的常识
 
--   2012 年微软发布 (ES6, ES2015)
--   Anders Hejlsberg 负责开发 TS 项目
--   开源, 拥抱 ES 标准
+- 2012 年微软发布 (ES6, ES2015)
+- Anders Hejlsberg 负责开发 TS 项目
+- 开源, 拥抱 ES 标准
 
 ## 额外的惊喜
 
@@ -99,13 +99,114 @@ any: 表示任意类型, 对该类型, ts 不做任何检查
 
 ## 3.2 基本类型
 
--   number: 数字
--   string: 字符串
--   boolean: 布尔值
--   数组
--   object: 对象
--   null 和 undefined
+- number: 数字
+- string: 字符串
+- boolean: 布尔值
+
+```typescript
+let nums2: number[] = [1, 2, 3];
+let nums2: Array<number> = [1, 2, 3];
+```
+
+- 数组
+- object: 对象 (约束的不是特别精准, 不能约束对象有那些属性)
+- null 和 undefined
 
 null 和 undefined 是所有其它类型的子类型,他们可以赋值给其它类型
 
 通过设置` "strictNullChecks": true`,可以获得更加严格的空类型检查, null 和 undefined 只能赋值给自身。
+
+## 3.3 其他常用类型
+
+- 联合类型: 多种类型任选其一
+
+配合类型保护: 当对某个变量进行类型判断后, 在判断语句中可以确定它的确切类型
+
+```typescript
+// 联合类型
+let name: string | undefined;
+
+// 联合类型, 类型提示小时, 配合类型保护, 确定变量的实际类型
+if (typeof name === "string") {
+  // 类型保护
+}
+```
+
+- void 类型: 通常用于约束函数的返回值,表示该函数没有任何返回
+- never 类型: 通常用于约束函数的返回值, 表示该函数永远不可能结束
+
+```typescript
+function throwError(msg: string): never {
+  throw new Error(msg);
+}
+```
+
+- 字面量类型: 使用一个值进行约束
+
+```typescript
+let gender: "男" | "女"; // 只能赋值为 "男"|"女"
+
+let nums: []; // 字面量约束, 空数组
+
+let user: {
+  name: string;
+  age: number;
+};
+```
+
+- 元祖类型 (Tuple): 固定长度的数组, 数组中每一项的类型确定
+- any 类型: any 类型可以绕过类型检查, 因此,any 类型的数据可以赋值给任意类型
+
+## 3.4 类型别名
+
+对已知的一些类型定义类型名称
+
+```typescript
+type Gender = "男" | "女";
+type User = {
+  name: string;
+  age: number;
+  gender: Gender;
+};
+
+function getUsers(g: Gender): User[] {
+  return [];
+}
+```
+
+## 3.5 函数的相关约束
+
+- 函数重载: 在函数实现之前,对函数调用的多种情况进行声明
+
+```typescript
+function combine(a: number, b: number): number;
+function combine(a: string, b: string): string;
+function combine(a: number | string, b: number | string): number | string {
+  if (typeof a === "number" && typeof b === "number") {
+    return a * b;
+  } else if (typeof a === "string" && typeof b === "string") {
+    return a + b;
+  }
+  throw new Error("a.b类型必须相同");
+}
+
+const res1 = combine(3, 3);
+const res2 = combine("3", "3");
+// const res3 = combine(3, "3"); ts 检查报错
+```
+
+- 可选参数: 在某些参数名后加上 ?, 表示该参数可以不用传递, 可选参数必须在参数列表末尾
+
+```typescript
+function sum(a: number, b: number, c?: number) {
+  if (c) {
+    return a + b + c;
+  } else {
+    return a + b;
+  }
+}
+
+sum(3, 4);
+```
+
+**TS 的类型约束是可选的, 可根据自身掌握在项目中使用**
