--- a/笔记/笔记01.md
+++ b/笔记/笔记01.md
@@ -1,3 +1,5 @@
+[toc]
+
 # 1 概述
 
 ## JS 开发中的问题
@@ -210,3 +212,103 @@ sum(3, 4);
 ```
 
 **TS 的类型约束是可选的, 可根据自身掌握在项目中使用**
+
+## 3.6 扑克牌小练习
+
+### 目标
+
+1. 创建一副扑克牌 (不包含大小王, 打印该扑克牌)
+
+# 4 扩展类型-枚举
+
+## 4.1 字面量类型的问题
+
+> 扩展类型: 类型别名、枚举、接口、类
+
+枚举通常用于约束某个变量的取值范围
+
+**字面量和联合类型配合使用,也可以达到同样的目标**
+
+- 在类型约束的位置会产生重复的代码。(可以使用类型别名解决这个问题)
+- 逻辑名称和真实的值产生混淆,会导致当修改真实值的时候,产生大量的修改
+- 字面量类型不会进入编译阶段
+
+## 4.2 枚举的使用
+
+- 如何定义一个枚举:
+
+```typescript
+enum 枚举名 {
+  枚举字段1 = 值1,
+  枚举字段2 = 值2,
+}
+```
+
+```typescript
+enum Gender {
+  Male = "男",
+  Female = "女",
+}
+
+let g: Gender;
+g = Gender.Male; // 使用时是逻辑名称
+
+console.log("debug", g); // 输出时时真实的值
+```
+
+枚举会出现在编译结果里, 编译结果中表现为对象。
+
+枚举的规则:
+
+- 枚举的值可以是字符串或数字
+- 数字枚举的值会自动自增
+- 被数字枚举约束的变量, 可以直接赋值为数字
+- 数字枚举的编译结果和字符串枚举有差异
+
+```javascript
+// 数字枚举的编译结果
+var Level;
+(function (Level) {
+  Level[(Level["level1"] = 0)] = "level1";
+  Level[(Level["level2"] = 1)] = "level2";
+})(Level || (Level = {}));
+console.log(Level.level1);
+```
+
+**最佳实践**
+
+- 尽量不要在一个枚举中既出现字符串字段,又出现数字字段
+- 使用枚举时,尽量使用枚举字段的名称,不直接使用真实的值
+
+## 4.3 枚举的位运算
+
+针对数字枚举
+
+位运算: 数字换算成二进制后进行位运算
+
+- 或运算: 有一个为 1 得 1
+- 与运算: 全是 1 的得 1
+- 异或: 相同为 0, 相异为 1
+
+```typescript
+enum Permission {
+  Read = 1, // 2^0 0001
+  Write = 2, // 2^1 0010
+  Create = 4, // 2^2 0100
+  Delete = 8, // 2^3 1000
+}
+
+let p: Permission = Permission.Read | Permission.Write;
+
+// 判断变量是否有某个权限
+function hasPermission(target: Permission, per: Permission): boolean {
+  return (target & per) === per;
+}
+
+const res: boolean = hasPermission(p, Permission.Create);
+console.log("debug", res); // true
+
+// 删除某个权限
+p = p ^ Permission.Read;
+console.log("debug", p);
+```
